feat, doc, chore : add, fix, docs. make functions add login, todo post, get, delete update with jwt. fix docs typos and explaination of above functions
